# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import entriesRouter from "./entries";
 import dashboardRouter from "./dashboard";
 import inningsRouter from "./innings";
 import gamesRouter from "./games";
+import sessionsRouter from "./sessions";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(entriesRouter);
 router.use(dashboardRouter);
 router.use(inningsRouter);
 router.use(gamesRouter);
+router.use(sessionsRouter);
 
 export default router;
